--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/platform-socket.io": "^11.0.9",
     "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/websockets": "^10.4.15",
     "argon2": "^0.41.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
@@ -42,7 +44,9 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
